--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,4 +4,10 @@
 
 body {
     background-color: #FBFCFF;
+    .cards{
+        div:nth-child(2) {
+            border-left: 3px solid #D0CCD0;
+            border-right: 3px solid #D0CCD0;
+        }
+    }
 }
